--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Contents">Contents<a class="anchor-link" href="#Contents">&#182;</a></h2><ul>
 <li><a href="#about-me">About Me</a></li>
+<li><a href="#recent-news">Recent News</a></li>
 <li><a href="#research">Research</a></li>
 <li><a href="#teaching">Teaching</a></li>
 <li><a href="#tutorials">Tutorials</a></li>
@@ -214,6 +215,18 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="about-me"></a></p>
 <h2 id="About-Me">About Me<a class="anchor-link" href="#About-Me">&#182;</a></h2><p>I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a>. I'm part of the <a href="http://cirl.lcsr.jhu.edu/">Computational Interaction and Robotics Laboratory</a> and the <a href="http://malonecenter.jhu.edu/">Malone Center for Engineering in Healthcare</a>. Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a BS/MS student at <a href="http://www.northeastern.edu/">Northeastern University</a>.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><a id="recent-news"></a></p>
+<h2 id="Recent-News">Recent News<a class="anchor-link" href="#Recent-News">&#182;</a></h2><p>Paper on surgical activity recognition conditionally accepted at MICCAI 2016:</p>
+<p>R. DiPietro, C. Lea, A. Malpani, S. Vedula, G.I. Lee, M.R. Lee, G.D. Hager: Recognizing Surgical Activities with Recurrent Neural Networks. Medical Image Computing and Computer Assisted Intervention (2016). To appear.</p>
 
 </div>
 </div>
