--- a/tensorflow-scan-examples/index.html
+++ b/tensorflow-scan-examples/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>tensorflow_scan_examples</title>
+<title>TensorFlow Scan Examples</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -194,7 +194,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Post-or-Jupyter-Notebook?">Post or Jupyter Notebook?<a class="anchor-link" href="#Post-or-Jupyter-Notebook?">&#182;</a></h2><p>This work is available both as a <a href="http://rdipietro.github.io/tensorflow-scan-examples/">post</a> and as a <a href="https://github.com/rdipietro/jupyter-notebooks/tree/master/tensorflow_scan_examples">Jupyter notebook</a>. If you see any mistakes or have any questions, please open a <a href="https://github.com/rdipietro/jupyter-notebooks/issues">GitHub issue</a>.</p>
+<h2 id="Post-or-Jupyter-Notebook?">Post or Jupyter Notebook?<a class="anchor-link" href="#Post-or-Jupyter-Notebook?">&#182;</a></h2><p>This work is available both as a <a href="http://rdipietro.github.io/tensorflow-scan-examples/">post</a> and as a <a href="https://github.com/rdipietro/jupyter-notebooks/tree/master/tensorflow-scan-examples">Jupyter notebook</a>. If you see any mistakes or have any questions, please open a <a href="https://github.com/rdipietro/jupyter-notebooks/issues">GitHub issue</a>.</p>
 
 </div>
 </div>
