Update friendly intro to cross entropy loss

--- a/friendly-intro-to-cross-entropy-loss/index.html
+++ b/friendly-intro-to-cross-entropy-loss/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>friendly_intro_to_cross_entropy_loss</title>
+<title>A Friendly Introduction to Cross-Entropy Loss</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -194,7 +194,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Post-or-Jupyter-Notebook?">Post or Jupyter Notebook?<a class="anchor-link" href="#Post-or-Jupyter-Notebook?">&#182;</a></h2><p>This work is available both as a <a href="http://rdipietro.github.io/friendly-intro-to-cross-entropy-loss/">post</a> and as a <a href="https://github.com/rdipietro/jupyter-notebooks/tree/master/friendly_intro_to_cross_entropy_loss">Jupyter notebook</a>. If you see any mistakes or have any questions, please open a <a href="https://github.com/rdipietro/jupyter-notebooks/issues">GitHub issue</a>.</p>
+<h2 id="Post-or-Jupyter-Notebook?">Post or Jupyter Notebook?<a class="anchor-link" href="#Post-or-Jupyter-Notebook?">&#182;</a></h2><p>This work is available both as a <a href="http://rdipietro.github.io/friendly-intro-to-cross-entropy-loss/">post</a> and as a <a href="https://github.com/rdipietro/jupyter-notebooks/tree/master/friendly-intro-to-cross-entropy-loss">Jupyter notebook</a>. If you see any mistakes or have any questions, please open a <a href="https://github.com/rdipietro/jupyter-notebooks/issues">GitHub issue</a>.</p>
 
 </div>
 </div>
