--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="recent-news"></a></p>
-<h2 id="Recent-News">Recent News<a class="anchor-link" href="#Recent-News">&#182;</a></h2><p>Paper on surgical activity recognition conditionally accepted at MICCAI 2016:</p>
+<h2 id="Recent-News">Recent News<a class="anchor-link" href="#Recent-News">&#182;</a></h2><h4 id="May,-2016">May, 2016<a class="anchor-link" href="#May,-2016">&#182;</a></h4><p>I'm happy to have received this year's Excellence in Teaching Award from the Department of Computer Science at Johns Hopkins.</p>
+<h4 id="April,-2016">April, 2016<a class="anchor-link" href="#April,-2016">&#182;</a></h4><p>Our paper on surgical activity recognition has been conditionally accepted at MICCAI 2016:</p>
 <p>R. DiPietro, C. Lea, A. Malpani, S. Vedula, G.I. Lee, M.R. Lee, G.D. Hager: Recognizing Surgical Activities with Recurrent Neural Networks. Medical Image Computing and Computer Assisted Intervention (2016). To appear.</p>
 
 </div>
@@ -249,7 +250,6 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="teaching"></a></p>
 <h2 id="Teaching">Teaching<a class="anchor-link" href="#Teaching">&#182;</a></h2><h3 id="Johns-Hopkins-University">Johns Hopkins University<a class="anchor-link" href="#Johns-Hopkins-University">&#182;</a></h3><ul>
-<li><strong>Recipient of the Excellence in Teaching Award from the Department of Computer Science.</strong> Spring, 2016.</li>
 <li><strong>Instructor for EN.500.111, HEART: Machine Learning for Surgical Workflow Analysis.</strong> In this course, students are exposed to basic machine-learning concepts and to some applications to surgical workflow analysis. Fall, 2015.</li>
 <li><strong>Teaching Assistant for EN.600.676, Machine Learning: Data to Models.</strong> In this course, students learn about probabilistic graphical models. They are exposed to the junction-tree algorithm, variational inference, Markov chain Monte carlo, etc. Spring, 2015.</li>
 <li><strong>Co-Instructor for EN.600.120, Intermediate Programming.</strong> In this course, students learn how to design programs, how to write code that's efficient but simple, and how to debug code when it's not working (C and C++). For more information, see Prof. Yair Amir's <a href="http://www.cnds.jhu.edu/courses/cs120/">course page</a>. Spring, 2014.</li>
