--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
 .highlight .err { border: 1px solid #FF0000 } /* Error */
 .highlight .k { color: #008000; font-weight: bold } /* Keyword */
 .highlight .o { color: #666666 } /* Operator */
+.highlight .ch { color: #408080; font-style: italic } /* Comment.Hashbang */
 .highlight .cm { color: #408080; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #BC7A00 } /* Comment.Preproc */
+.highlight .cpf { color: #408080; font-style: italic } /* Comment.PreprocFile */
 .highlight .c1 { color: #408080; font-style: italic } /* Comment.Single */
 .highlight .cs { color: #408080; font-style: italic } /* Comment.Special */
 .highlight .gd { color: #A00000 } /* Generic.Deleted */
@@ -225,9 +227,9 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="recent-news"></a></p>
-<h2 id="Recent-News">Recent News<a class="anchor-link" href="#Recent-News">&#182;</a></h2><h4 id="May,-2016">May, 2016<a class="anchor-link" href="#May,-2016">&#182;</a></h4><p>I'm happy to have received this year's Excellence in Teaching Award from the Department of Computer Science at Johns Hopkins.</p>
-<h4 id="April,-2016">April, 2016<a class="anchor-link" href="#April,-2016">&#182;</a></h4><p>Our paper on surgical activity recognition has been conditionally accepted at MICCAI 2016:</p>
-<p>R. DiPietro, C. Lea, A. Malpani, S. Vedula, G.I. Lee, M.R. Lee, G.D. Hager: Recognizing Surgical Activities with Recurrent Neural Networks. Medical Image Computing and Computer Assisted Intervention (2016). To appear.</p>
+<h2 id="Recent-News">Recent News<a class="anchor-link" href="#Recent-News">&#182;</a></h2><h4 id="May,-2016">May, 2016<a class="anchor-link" href="#May,-2016">&#182;</a></h4><p>Received this year's Excellence in Teaching Award from the Department of Computer Science at Johns Hopkins.</p>
+<h4 id="April,-2016">April, 2016<a class="anchor-link" href="#April,-2016">&#182;</a></h4><p>Paper on surgical activity recognition has been conditionally accepted at MICCAI 2016:</p>
+<p>R. DiPietro, C. Lea, A. Malpani, N. Ahmidi, S. Vedula, G.I. Lee, M.R. Lee, G.D. Hager: Recognizing Surgical Activities with Recurrent Neural Networks. Medical Image Computing and Computer Assisted Intervention (2016). To appear.</p>
 
 </div>
 </div>
