--- a/index.html
+++ b/index.html
@@ -227,9 +227,11 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="recent-news"></a></p>
-<h2 id="Recent-News">Recent News<a class="anchor-link" href="#Recent-News">&#182;</a></h2><h4 id="May,-2016">May, 2016<a class="anchor-link" href="#May,-2016">&#182;</a></h4><p>Received this year's Excellence in Teaching Award from the Department of Computer Science at Johns Hopkins.</p>
-<h4 id="April,-2016">April, 2016<a class="anchor-link" href="#April,-2016">&#182;</a></h4><p>Paper on surgical activity recognition has been conditionally accepted at MICCAI 2016:</p>
-<p>R. DiPietro, C. Lea, A. Malpani, N. Ahmidi, S. Vedula, G.I. Lee, M.R. Lee, G.D. Hager: Recognizing Surgical Activities with Recurrent Neural Networks. Medical Image Computing and Computer Assisted Intervention (2016). To appear.</p>
+<h2 id="Recent-News">Recent News<a class="anchor-link" href="#Recent-News">&#182;</a></h2><h4 id="June,-2016">June, 2016<a class="anchor-link" href="#June,-2016">&#182;</a></h4><p>Paper on surgical activity recognition conditionally accepted and tentatively selected for an oral presentation at MICCAI 2016:</p>
+<p>R. DiPietro, C. Lea, A. Malpani, N. Ahmidi, S. Vedula, G.I. Lee, M.R. Lee, G.D. Hager: Recognizing Surgical Activities with Recurrent Neural Networks. Medical Image Computing and Computer Assisted Intervention (2016).</p>
+<p><a href="http://arxiv.org/abs/1606.06329">http://arxiv.org/abs/1606.06329</a></p>
+<p><a href="https://github.com/rdipietro/miccai-2016-surgical-activity-rec">https://github.com/rdipietro/miccai-2016-surgical-activity-rec</a></p>
+<h4 id="May,-2016">May, 2016<a class="anchor-link" href="#May,-2016">&#182;</a></h4><p>Received this year's Excellence in Teaching Award from the Department of Computer Science at Johns Hopkins.</p>
 
 </div>
 </div>
@@ -240,7 +242,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="research"></a></p>
-<h2 id="Research">Research<a class="anchor-link" href="#Research">&#182;</a></h2><p>My research focuses on machine-learning methods for modeling sequential data, and I'm especially interested in recurrent neural networks and attention-based approaches. From an applications perspective, I focus on healthcare. For example, <a href="http://www.nejm.org/doi/full/10.1056/NEJMsa1300625">operative skill is connected to postoperative complications</a>, and <a href="http://www.ncbi.nlm.nih.gov/pubmed/19789010">current training practices need to improve</a>. Is it possible to automatically assess performance and automatically provide frequent, objective feedback during training?</p>
+<h2 id="Research">Research<a class="anchor-link" href="#Research">&#182;</a></h2><p>My research focuses on machine-learning methods for modeling sequential data, especially recurrent neural networks. From an applications perspective, I focus on healthcare. For example, <a href="http://www.nejm.org/doi/full/10.1056/NEJMsa1300625">operative skill is connected to postoperative complications</a>, and <a href="http://www.ncbi.nlm.nih.gov/pubmed/19789010">current training practices need to improve</a>. Is it possible to automatically assess performance and automatically provide frequent, objective feedback during training?</p>
 
 </div>
 </div>
