--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="research"></a></p>
-<h2 id="Research">Research<a class="anchor-link" href="#Research">&#182;</a></h2><p>My research focuses on machine-learning methods for modeling sequential data, especially recurrent neural networks. From an applications perspective, I focus on healthcare. For example, <a href="http://www.nejm.org/doi/full/10.1056/NEJMsa1300625">operative skill is connected to postoperative complications</a>, and <a href="http://www.ncbi.nlm.nih.gov/pubmed/19789010">current training practices need to improve</a>. Is it possible to automatically assess performance and automatically provide frequent, objective feedback during training?</p>
+<h2 id="Research">Research<a class="anchor-link" href="#Research">&#182;</a></h2><p>My research focuses on machine-learning methods for modeling sequential data, and especially on recurrent neural networks. From an applications perspective, I focus on healthcare. For example, <a href="http://www.nejm.org/doi/full/10.1056/NEJMsa1300625">operative skill is connected to postoperative complications</a>, and <a href="http://www.ncbi.nlm.nih.gov/pubmed/19789010">current training practices need to improve</a>. Is it possible to automatically assess performance and automatically provide frequent, objective feedback during training?</p>
 
 </div>
 </div>
