--- a/index.html
+++ b/index.html
@@ -197,8 +197,17 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Contents">Contents<a class="anchor-link" href="#Contents">&#182;</a></h2><ul>
-<li><a href="#about-me">About Me</a></li>
+<p>I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a>. I'm part of the <a href="http://cirl.lcsr.jhu.edu/">Computational Interaction and Robotics Laboratory</a> and the <a href="http://malonecenter.jhu.edu/">Malone Center for Engineering in Healthcare</a>. Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a BS/MS student at <a href="http://www.northeastern.edu/">Northeastern University</a>.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<ul>
 <li><a href="#recent-news">Recent News</a></li>
 <li><a href="#research">Research</a></li>
 <li><a href="#teaching">Teaching</a></li>
@@ -215,23 +224,13 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><a id="about-me"></a></p>
-<h2 id="About-Me">About Me<a class="anchor-link" href="#About-Me">&#182;</a></h2><p>I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a>. I'm part of the <a href="http://cirl.lcsr.jhu.edu/">Computational Interaction and Robotics Laboratory</a> and the <a href="http://malonecenter.jhu.edu/">Malone Center for Engineering in Healthcare</a>. Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a BS/MS student at <a href="http://www.northeastern.edu/">Northeastern University</a>.</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="recent-news"></a></p>
-<h2 id="Recent-News">Recent News<a class="anchor-link" href="#Recent-News">&#182;</a></h2><h4 id="June,-2016">June, 2016<a class="anchor-link" href="#June,-2016">&#182;</a></h4><p>Paper on surgical activity recognition conditionally accepted and tentatively selected for an oral presentation at MICCAI 2016:</p>
+<h2 id="Recent-News">Recent News<a class="anchor-link" href="#Recent-News">&#182;</a></h2><h4 id="June,-2016">June, 2016<a class="anchor-link" href="#June,-2016">&#182;</a></h4><p>Our paper on surgical activity recognition has been conditionally accepted at MICCAI 2016:</p>
 <p>R. DiPietro, C. Lea, A. Malpani, N. Ahmidi, S. Vedula, G.I. Lee, M.R. Lee, G.D. Hager: Recognizing Surgical Activities with Recurrent Neural Networks. Medical Image Computing and Computer Assisted Intervention (2016).</p>
+<p>Update: Tentatively selected for an oral presentation!</p>
+<p>Update: Paper and code now available online.</p>
 <p><a href="http://arxiv.org/abs/1606.06329">http://arxiv.org/abs/1606.06329</a></p>
 <p><a href="https://github.com/rdipietro/miccai-2016-surgical-activity-rec">https://github.com/rdipietro/miccai-2016-surgical-activity-rec</a></p>
-<h4 id="May,-2016">May, 2016<a class="anchor-link" href="#May,-2016">&#182;</a></h4><p>Received this year's Excellence in Teaching Award from the Department of Computer Science at Johns Hopkins.</p>
 
 </div>
 </div>
@@ -242,7 +241,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="research"></a></p>
-<h2 id="Research">Research<a class="anchor-link" href="#Research">&#182;</a></h2><p>My research focuses on machine-learning methods for modeling sequential data, and especially on recurrent neural networks. From an applications perspective, I focus on healthcare. For example, <a href="http://www.nejm.org/doi/full/10.1056/NEJMsa1300625">operative skill is connected to postoperative complications</a>, and <a href="http://www.ncbi.nlm.nih.gov/pubmed/19789010">current training practices need to improve</a>. Is it possible to automatically assess performance and automatically provide frequent, objective feedback during training?</p>
+<h2 id="Research">Research<a class="anchor-link" href="#Research">&#182;</a></h2><p>My research focuses on machine-learning methods for modeling sequential data, and I'm especially interested in recurrent-neural-network based methods. From an applications perspective, I focus on healthcare. For example, <a href="http://www.nejm.org/doi/full/10.1056/NEJMsa1300625">operative skill is connected to postoperative complications</a>, and <a href="http://www.ncbi.nlm.nih.gov/pubmed/19789010">current training practices need to improve</a>. Is it possible to automatically assess performance and automatically provide frequent, objective feedback during training?</p>
 
 </div>
 </div>
