--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<ul>
+<h2 id="Contents">Contents<a class="anchor-link" href="#Contents">&#182;</a></h2><ul>
 <li><a href="#recent-news">Recent News</a></li>
 <li><a href="#research">Research</a></li>
 <li><a href="#teaching">Teaching</a></li>
