test twitter follow

--- a/friendly-intro-to-cross-entropy-loss/index.html
+++ b/friendly-intro-to-cross-entropy-loss/index.html
@@ -11790,8 +11790,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="A-Friendly-Introduction-to-Cross-Entropy-Loss">A Friendly Introduction to Cross-Entropy Loss<a class="anchor-link" href="#A-Friendly-Introduction-to-Cross-Entropy-Loss">&#182;</a></h1><h4 id="By-Rob-DiPietro-&#8211;-Version-0.1-&#8211;-May-2,-2016">By <a href="http://rdipietro.github.io">Rob DiPietro</a> &#8211; Version 0.1 &#8211; May 2, 2016<a class="anchor-link" href="#By-Rob-DiPietro-&#8211;-Version-0.1-&#8211;-May-2,-2016">&#182;</a></h4><p><a href="https://twitter.com/rsdipietro" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @rsdipietro</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></p>
-
+<h1 id="A-Friendly-Introduction-to-Cross-Entropy-Loss">A Friendly Introduction to Cross-Entropy Loss<a class="anchor-link" href="#A-Friendly-Introduction-to-Cross-Entropy-Loss">&#182;</a></h1><h4 id="By-Rob-DiPietro-&#8211;-Version-0.1-&#8211;-May-2,-2016">By <a href="http://rdipietro.github.io">Rob DiPietro</a> &#8211; Version 0.1 &#8211; May 2, 2016<a class="anchor-link" href="#By-Rob-DiPietro-&#8211;-Version-0.1-&#8211;-May-2,-2016">&#182;</a></h4><center><a href="https://twitter.com/rsdipietro" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @rsdipietro</a></center>
 </div>
 </div>
 </div>
@@ -11965,8 +11964,7 @@ $$ -\log L(\{y^{(n)}\}, \{\hat{y}^{(n)}\}) = \sum_n \big[-\sum_i y_i \log \hat{y
 <h2 id="About-Me">About Me<a class="anchor-link" href="#About-Me">&#182;</a></h2><p><img src="images/rob_small.jpg" alt="Rob"></p>
 <p>I'm <a href="http://rdipietro.github.com">Rob DiPietro</a>, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a>. I'm part of the <a href="http://cirl.lcsr.jhu.edu/">Computational Interaction and Robotics Laboratory</a> and the <a href="http://malonecenter.jhu.edu/">Malone Center for Engineering in Healthcare</a>. Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a BS/MS student at <a href="http://www.northeastern.edu/">Northeastern University</a>.</p>
 <p>You can find my other tutorials <a href="http://rdipietro.github.io/#tutorials">here</a>.</p>
-<p><a href="https://twitter.com/rsdipietro" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @rsdipietro</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></p>
-
+<center><a href="https://twitter.com/rsdipietro" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @rsdipietro</a></center>
 </div>
 </div>
 </div>
