test twitter follow

--- a/friendly-intro-to-cross-entropy-loss/index.html
+++ b/friendly-intro-to-cross-entropy-loss/index.html
@@ -11790,7 +11790,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="A-Friendly-Introduction-to-Cross-Entropy-Loss">A Friendly Introduction to Cross-Entropy Loss<a class="anchor-link" href="#A-Friendly-Introduction-to-Cross-Entropy-Loss">&#182;</a></h1><h4 id="By-Rob-DiPietro-&#8211;-Version-0.1-&#8211;-May-2,-2016">By <a href="http://rdipietro.github.io">Rob DiPietro</a> &#8211; Version 0.1 &#8211; May 2, 2016<a class="anchor-link" href="#By-Rob-DiPietro-&#8211;-Version-0.1-&#8211;-May-2,-2016">&#182;</a></h4><center><a href="https://twitter.com/rsdipietro" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @rsdipietro</a></center>
+<h1 id="A-Friendly-Introduction-to-Cross-Entropy-Loss">A Friendly Introduction to Cross-Entropy Loss<a class="anchor-link" href="#A-Friendly-Introduction-to-Cross-Entropy-Loss">&#182;</a></h1><h4 id="By-Rob-DiPietro-&#8211;-Version-0.1-&#8211;-May-2,-2016">By <a href="http://rdipietro.github.io">Rob DiPietro</a> &#8211; Version 0.1 &#8211; May 2, 2016<a class="anchor-link" href="#By-Rob-DiPietro-&#8211;-Version-0.1-&#8211;-May-2,-2016">&#182;</a></h4><h4 id="Follow-@rsdipietro"><a class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-size="large" href="https://twitter.com/rsdipietro">Follow @rsdipietro</a><a class="anchor-link" href="#Follow-@rsdipietro">&#182;</a></h4>
 </div>
 </div>
 </div>
