add twitter follow

--- a/friendly-intro-to-cross-entropy-loss/index.html
+++ b/friendly-intro-to-cross-entropy-loss/index.html
@@ -6,15 +6,16 @@
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-52854930-2', 'auto');
-  ga('send', 'pageview');
+    ga('send', 'pageview');
 
 </script>
-<script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
+<script type="text/javascript" async
+src="https://platform.twitter.com/widgets.js"></script>
 
 <style type="text/css">
     /*!
@@ -11964,7 +11965,7 @@ $$ -\log L(\{y^{(n)}\}, \{\hat{y}^{(n)}\}) = \sum_n \big[-\sum_i y_i \log \hat{y
 <h2 id="About-Me">About Me<a class="anchor-link" href="#About-Me">&#182;</a></h2><p><img src="images/rob_small.jpg" alt="Rob"></p>
 <p>I'm <a href="http://rdipietro.github.com">Rob DiPietro</a>, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a>. I'm part of the <a href="http://cirl.lcsr.jhu.edu/">Computational Interaction and Robotics Laboratory</a> and the <a href="http://malonecenter.jhu.edu/">Malone Center for Engineering in Healthcare</a>. Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a BS/MS student at <a href="http://www.northeastern.edu/">Northeastern University</a>.</p>
 <p>You can find my other tutorials <a href="http://rdipietro.github.io/#tutorials">here</a>.</p>
-<center><a href="https://twitter.com/rsdipietro" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @rsdipietro</a></center>
+<h4 id="Follow-@rsdipietro"><a class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-size="large" href="https://twitter.com/rsdipietro">Follow @rsdipietro</a><a class="anchor-link" href="#Follow-@rsdipietro">&#182;</a></h4>
 </div>
 </div>
 </div>
