add subscribe form to CE tutorial

--- a/friendly-intro-to-cross-entropy-loss/index.html
+++ b/friendly-intro-to-cross-entropy-loss/index.html
@@ -11821,6 +11821,7 @@ div#notebook {
 <li><a href="#conclusions">Conclusions</a></li>
 <li><a href="#acknowledgements">Acknowledgements</a></li>
 <li><a href="#about-me">About Me</a></li>
+<li><a href="#subscribe">Subscribe</a></li>
 </ul>
 
 </div>
@@ -11958,6 +11959,25 @@ $$ -\log L(\{y^{(n)}\}, \{\hat{y}^{(n)}\}) = \sum_n \big[-\sum_i y_i \log \hat{y
 <h4><a href="https://github.com/rdipietro"><i class="fab fa-github"></i> GitHub</a> &nbsp; &nbsp; <a href="https://twitter.com/rsdipietro"><i class="fab fa-twitter"></i> Twitter</a></h4>
 <p>I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a>. For more information and/or tutorials, please visit <a href="https://rdipietro.github.com">https://rdipietro.github.com</a>.</p>
 
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><a id="subscribe"></a></p>
+<h2 id="Subscribe">Subscribe<a class="anchor-link" href="#Subscribe">&#182;</a></h2><p>I rarely post new projects / tutorials, but sign up if you'd like to hear about them when I do:</p>
+<p><link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css"></p>
+<div id="mc_embed_signup">
+<form action="https://github.us18.list-manage.com/subscribe/post?u=8c7982aa4c99325d71985770f&amp;id=b9d38609d0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8c7982aa4c99325d71985770f_b9d38609d0" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
 </div>
 </div>
 </div>
